<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Android Open Kang Project (AOKP)
  ~  Author: Evan Conway (P4R4N01D), 2015
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorCardBackground"
    android:orientation="vertical"
    android:id="@+id/layout_quick_comment"
    tools:visibility="visible"
    android:visibility="gone">

    <View android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/comment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="2dp"
        android:background="?attr/colorCardBackground"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/btn_expand_comment"
            style="?attr/borderlessButtonBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:contentDescription="@string/review_advanced_comment_description"
            android:minHeight="36dp"
            android:minWidth="36dp"
            app:srcCompat="?attr/upIcon"
            android:tint="?attr/mainBackgroundColor" />

        <EditText
            android:id="@+id/new_comment_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/review_add_comment"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/btn_add_comment"
            style="?attr/borderlessButtonBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:contentDescription="@string/menu_post_comment"
            android:minHeight="36dp"
            android:minWidth="36dp"
            android:src="?attr/sendIcon"
            android:tint="?attr/mainBackgroundColor" />
    </LinearLayout>

</RelativeLayout>